--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-ejs-layouts": "^2.5.0",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
