--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-ejs-layouts": "^2.5.0",
+    "faker": "^4.1.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
