--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-ejs-layouts": "^2.5.0",
+    "express-fileupload": "^0.4.0",
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.2.14",
