--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
